--- a/amazon.html
+++ b/amazon.html
@@ -4,18 +4,30 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Riproduzione mockup</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <div class="leftLogoCont">
-        <img src="./assets/assets/logo.png" alt="Logo amazon" />
+        <img class="imgLogo" src="./assets/assets/logo.png" alt="Logo amazon" />
       </div>
-      <div class="menuCont"></div>
+      <div class="menuCont">
+        <ul>
+          <li>All</li>
+          <li>Today's deals</li>
+          <li>Customer Service</li>
+          <li>Registry</li>
+          <li>Gift Cards</li>
+          <li>Sell</li>
+        </ul>
+      </div>
     </header>
     <!-- Fine Header -->
-    <main>
-      <div class="orangeCont"></div>
+    <main class="mainCont">
+      <div class="orangeCont">
+        <p>Shop All Holiday Gift Cards</p>
+      </div>
       <div class="greenCont"></div>
       <div>
         <div class="4box"></div>
