--- a/amazon.html
+++ b/amazon.html
@@ -28,17 +28,27 @@
       <div class="orangeCont">
         <p>Shop All Holiday Gift Cards</p>
       </div>
-      <div class="greenCont"></div>
-      <div>
-        <div class="4box"></div>
+      <div class="greenCont">
+        <h1>Holiday Gift Guides</h1>
+        <p>Be a go-gifter</p>
+      </div>
+      <div class="boxCont">
+        <p>Find the perfect gift <a href="#">Shop now</a></p>
+        <div><img src="./assets/assets/img_1.jpg" alt="kindle" /></div>
+        <div><img src="./assets/assets/img_2.jpg" alt="notebook" /></div>
+        <div><img src="./assets/assets/img_3.jpg" alt="i-watch" /></div>
+        <div><img src="./assets/assets/img_4.jpg" alt="pets" /></div>
+        <div style="clear: both"></div>
       </div>
       <div class="imageBox1"></div>
+      <p>Play the gifting game <a href="#">Shop gaming</a></p>
       <div class="imageBox2"></div>
+      <p>The sound of cheer <a href="#">Shop Audio & Accessories</a></p>
     </main>
     <!-- Fine Main -->
     <footer>
-      <div class="BttCont"></div>
-      <div class="centerLogoCont"></div>
+      <div class="BttCont">Back to the top</div>
+      <div class="centerLogoCont"><img class="imgLogo" src="./assets/assets/logo.png" alt="Logo amazon" /></div>
     </footer>
     <!-- Fine footer -->
   </body>
