--- a/amazon.html
+++ b/amazon.html
@@ -34,10 +34,10 @@
       </div>
       <div class="boxCont">
         <p>Find the perfect gift <a href="#">Shop now</a></p>
-        <div><img src="./assets/assets/img_1.jpg" alt="kindle" /></div>
-        <div><img src="./assets/assets/img_2.jpg" alt="notebook" /></div>
-        <div><img src="./assets/assets/img_3.jpg" alt="i-watch" /></div>
-        <div><img src="./assets/assets/img_4.jpg" alt="pets" /></div>
+        <div class="box"><img class="imageBox" src="./assets/assets/img_1.jpg" alt="kindle" /></div>
+        <div class="box"><img class="imageBox" src="./assets/assets/img_2.jpg" alt="notebook" /></div>
+        <div class="box"><img class="imageBox" src="./assets/assets/img_3.jpg" alt="i-watch" /></div>
+        <div class="box"><img class="imageBox" src="./assets/assets/img_4.jpg" alt="pets" /></div>
         <div style="clear: both"></div>
       </div>
       <div class="imageBox1"></div>
