--- a/amazon.html
+++ b/amazon.html
@@ -32,7 +32,7 @@
         <h1>Holiday Gift Guides</h1>
         <p>Be a go-gifter</p>
       </div>
-      <div class="boxCont">
+      <div class="whiteBox">
         <p>Find the perfect gift <a href="#">Shop now</a></p>
         <div class="box"><img class="imageBox" src="./assets/assets/img_1.jpg" alt="kindle" /></div>
         <div class="box"><img class="imageBox" src="./assets/assets/img_2.jpg" alt="notebook" /></div>
